Added configuration for dataSource and spring data repositories.