@@ -1,21 +1,138 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.company.news</groupId>
-  <artifactId>news-feed-bh-app</artifactId>
-  <packaging>war</packaging>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>news-feed-bh-app Maven Webapp</name>
-  <url>http://maven.apache.org</url>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
-  <build>
-    <finalName>news-feed-bh-app</finalName>
-  </build>
+  
+	<parent>
+  		<groupId>com.company.news</groupId>
+		<artifactId>news-feed</artifactId>
+		<version>1.0.0</version>
+		<relativePath>../news-feed</relativePath>
+  	</parent>
+  	
+	<modelVersion>4.0.0</modelVersion>
+	
+	<artifactId>news-feed-bh-app</artifactId>
+	<packaging>war</packaging>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>news-feed-bh-app Maven Webapp</name>
+	<url>http://maven.apache.org</url>
+
+	<dependencies>
+		<dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-context</artifactId>
+	        <version>${spring.version}</version>
+	    </dependency>
+	    <dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-web</artifactId>
+	        <version>${spring.version}</version>
+	    </dependency>
+	    <dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-orm</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-oxm</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.integration</groupId>
+			<artifactId>spring-integration-core</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.integration</groupId>
+			<artifactId>spring-integration-file</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework.integration</groupId>
+		    <artifactId>spring-integration-ftp</artifactId>
+		    <version>${spring.version}</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-expression</artifactId>
+		    <version>${spring.version}</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework.data</groupId>
+		    <artifactId>spring-data-jpa</artifactId>
+		    <version>${spring.data.version}</version>
+		</dependency>  
+	</dependencies>
+  
+	<build>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
+		
+		<finalName>NEWS-FEED-BH-APP</finalName>
+		
+		<plugins>
+		    <plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-war-plugin</artifactId>
+			    <version>2.5</version>
+			    <configuration>
+			        <webResources>
+			            <resource>
+			                <filtering>true</filtering>
+			                <directory>src/main/webapp</directory>
+			                <includes>
+			                    <include>**/web.xml</include>
+			                </includes>
+			            </resource>
+			        </webResources>
+			        <warSourceDirectory>src/main/webapp</warSourceDirectory>
+			        <webXml>src/main/webapp/WEB-INF/web.xml</webXml>
+			    </configuration>
+			</plugin>
+	    
+	        <!--plugin>
+	            <groupId>org.apache.tomcat.maven</groupId>
+	            <artifactId>tomcat7-maven-plugin</artifactId>
+	            <version>2.2</version>
+	            <configuration>
+	                <systemProperties>
+	                    <JAVA_OPTS>-Xms256m -Xmx512m -XX:MaxPermSize=256m</JAVA_OPTS>
+	                </systemProperties>
+	                <path>/claims</path>
+	                <port>8081</port>
+	            </configuration>
+	            <dependencies>
+	                <dependency>
+	                    <groupId>com.h2database</groupId>
+	                    <artifactId>h2</artifactId>
+	                    <version>1.3.176</version>
+	                </dependency>
+	                <dependency>
+	                    <groupId>commons-dbcp</groupId>
+	                    <artifactId>commons-dbcp</artifactId>
+	                    <version>1.4</version>
+	                </dependency>
+	               <dependency>
+	                    <groupId>org.apache.activemq</groupId>
+	                    <artifactId>activemq-core</artifactId>
+	                    <version>5.7.0</version>
+	                </dependency>
+	                <dependency>
+	                    <groupId>org.hibernate.javax.persistence</groupId>
+	                    <artifactId>hibernate-jpa-2.0-api</artifactId>
+	                    <version>1.0.1.Final</version>
+	                </dependency> 
+	                <dependency>
+	                    <groupId>javax</groupId>
+	                    <artifactId>javaee-api</artifactId>
+	                    <version>7.0</version>
+	                </dependency>
+	            </dependencies>
+	        </plugin-->
+	    </plugins>
+	</build>
 </project>
